# autonomous-rover-thesis

./: README.md
rover_autonomy/: .gitignore  instructions.txt
rover_autonomy/src/rover_lidar/: package.xml  setup.py
rover_autonomy/src/rover_lidar/config/: cartographer3D.lua  cartographer3DnoGPS.lua  ekf.yaml  nav2_params.yaml
rover_autonomy/src/rover_lidar/description/: rover_description.urdf
rover_autonomy/src/rover_lidar/launch/: rover_full.launch.py
rover_autonomy/src/rover_lidar/rover_lidar/: rover_lidar_controller.py  rover_lidar_fake_odom.py  rover_lidar_params.yaml  rover_lidar_params_def.yaml  rover_lidar_scanner.py
rover_autonomy/src/rover_lidar/rviz/: urdf_config.rviz
rover_cad/: Garmin LIDAR-Lite V3HP.SLDPRT  Position_sensor_lidar_mount.SLDPRT  Position_sensor_lidar_slider.SLDPRT  SG90 - Micro Servo 9g - Tower Pro.1.SLDPRT  gps_mount.SLDPRT  lidar_assembly.SLDASM  lidar_mount.SLDPRT
rover_lowlevel/lidar_controller/: lidar_controller.ino
rover_lowlevel/rover_controller/: rover_controller.ino
rover_matlab/: ex_lid.asv  ex_lid.pcd  pc_dist.asv  pc_dist.m
